# music-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/shaders/: fun.fs  fun.vs
src/: CMakeLists.txt  common.h  debug.cpp  debug.h  main.cpp  visualizer.cpp  visualizer.h
